--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
             <ul>
                 <li>
                     <a href="/">
-                        Vietnam-Crypto
+                        Vietnam-Trader
                     </a>
                 </li>
                 <li>
