--- a/src/assets/scss/core/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/core/_sidebar-and-main-panel.scss
@@ -39,6 +39,7 @@
         img{
             width: 35px;
             top: 16px;
+            left: 19px;
             position: absolute;
         }
     }
