--- a/src/app/Article/article.component.html
+++ b/src/app/Article/article.component.html
@@ -3,7 +3,7 @@
         <div class="card">
             <div class="card-header card-header-danger">
                 <h4 class="card-title">{{article.title}}</h4>
-                <p class="card-category">Created using Roboto Font Family</p>
+                <p class="card-category">Đăng bởi {{article.username}} - {{article.createdDate}}</p>
             </div>
             <div class="card-body row">
                 <div class="col-md-8" id="typography">
