--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <div class="logo">
     <a href="https://www.vietnam-trader.com" class="simple-text">
-        <!--        <div class="logo-img">-->
-        <!--            <img src="/assets/img/angular2-logo-red.png"/>-->
-        <!--        </div>-->
+        <div class="logo-img">
+            <img src="/assets/img/favicon.png"/>
+        </div>
         Vietnam-Trader
     </a>
 </div>
